--- a/package.json
+++ b/package.json
@@ -7,32 +7,32 @@
     "url": "https://github.com/w3c/Mobile-Checker.git"
   },
   "dependencies": {
-    "binary-reader":"0.1.2",
-    "compression": "1.0.11",
-    "css": "2.1.0",
-    "easyimage": "1.0.2",
+    "binary-reader": "0.1.2",
+    "compression": "^1.0.11",
+    "css": "^2.1.0",
+    "easyimage": "^1.0.2",
     "effective-domain-name-parser": "0.0.1",
-    "ejs": "1.0.0",
-    "express": "4.4.1",
-    "headless": "0.2.1",
-    "image-headers":"0.3.3",
+    "ejs": "^1.0.0",
+    "express": "^4.4.1",
+    "headless": "^0.2.1",
+    "image-headers": "0.3.3",
     "insafe": "^0.3.0",
     "intl": "^0.1.4",
-    "ip": "0.3.1",
-    "media-type": "0.1.0",
-    "metaviewport-parser": "^0.0.1",
-    "mkdirp": "0.5.0",
-    "mobile-web-browser-emulator": "0.0.3 - 0.0.4",
-    "node-uuid": "1.4.1",
-    "q": "1.0.1",
-    "request": "^2.58.0",
+    "ip": "^0.3.1",
     "jsonschema": "^1.0.1",
-    "socket.io": "1.0.4"
+    "media-type": "^0.1.0",
+    "metaviewport-parser": "^0.0.1",
+    "mkdirp": "^0.5.0",
+    "mobile-web-browser-emulator": "0.0.3 - 0.0.4",
+    "node-uuid": "^1.4.1",
+    "q": "^1.0.1",
+    "request": "^2.58.0",
+    "socket.io": "^1.0.4"
   },
   "devDependencies": {
     "coveralls": "^2.11.2",
     "expect.js": "^0.3.1",
-    "istanbul": "^0.3.14",
+    "istanbul": "^0.3.22",
     "jsdom": "^3.1.2",
     "mocha": "^2.2.5"
   },
@@ -40,6 +40,6 @@
     "coverage": "istanbul cover _mocha",
     "coveralls": "npm run coverage && cat ./coverage/lcov.info | coveralls",
     "start": "node app.js",
-    "test": "mocha --timeout 20000 --globals Intl,IntlPolyfill,ErrorHandler"
+    "test": "mocha -c -G --timeout 20000 --globals Intl,IntlPolyfill,ErrorHandler"
   }
 }
