--- a/package.json
+++ b/package.json
@@ -7,34 +7,34 @@
     "url": "https://github.com/w3c/Mobile-Checker.git"
   },
   "dependencies": {
-    "binary-reader": "0.1.2",
-    "compression": "^1.0.11",
-    "css": "^2.1.0",
-    "easyimage": "^1.0.2",
-    "effective-domain-name-parser": "0.0.1",
-    "ejs": "^1.0.0",
-    "express": "^4.4.1",
-    "headless": "^0.2.1",
-    "image-headers": "0.3.3",
-    "insafe": "^0.3.0",
-    "intl": "^0.1.4",
-    "ip": "^0.3.1",
-    "jsonschema": "^1.0.1",
-    "media-type": "^0.1.0",
-    "metaviewport-parser": "^0.0.1",
-    "mkdirp": "^0.5.0",
-    "mobile-web-browser-emulator": "0.0.3 - 0.0.4",
-    "node-uuid": "^1.4.1",
-    "q": "^1.0.1",
-    "request": "^2.58.0",
-    "socket.io": "^1.0.4"
+    "binary-reader": "0.1",
+    "compression": "1.6",
+    "css": "2.2",
+    "easyimage": "2.1",
+    "effective-domain-name-parser": "0.0.2",
+    "ejs": "2.4",
+    "express": "4.13",
+    "headless": "1.0",
+    "image-headers": "0.3",
+    "insafe": "0.3",
+    "intl": "1.1",
+    "ip": "1.1",
+    "jsonschema": "1.1",
+    "media-type": "0.3",
+    "metaviewport-parser": "0.0.1",
+    "mkdirp": "0.5",
+    "mobile-web-browser-emulator": "0.0.4",
+    "node-uuid": "1.4",
+    "q": "1.4",
+    "request": "2.69",
+    "socket.io": "1.4"
   },
   "devDependencies": {
-    "coveralls": "^2.11.2",
-    "expect.js": "^0.3.1",
-    "istanbul": "^0.3.22",
-    "jsdom": "^3.1.2",
-    "mocha": "^2.2.5"
+    "coveralls": "2.11",
+    "expect.js": "0.3",
+    "istanbul": "0.4",
+    "jsdom": "8.0",
+    "mocha": "2.4"
   },
   "scripts": {
     "coverage": "istanbul cover _mocha",
