--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-# Logs
 logs
 *.log
-
-# Coverage directory used by tools like istanbul
 coverage
-
 public/*.png
 node_modules
+browsermob-proxy-2.1.1-bin.zip
+browsermob-proxy-2.1.1/
+google-chrome-stable_current_amd64.deb
